# TuringInstitute

./: .gitignore  CMakeLists.txt
examine/: main.cpp
homeworks/: 20250223-冰柠.md  20250224-冰柠.md  20250225-冰柠.md  20250226-冰柠.md  20250227-冰柠.md  20250228-冰柠.md  20250301-冰柠.md  20250302-冰柠.md  20250303-冰柠.md  20250304-冰柠.md  20250305-冰柠.md  template.md
include/: PascalsTriangle.h  algo.h  areaDiff.h  avgAge.h  caseConvert.h  fibonacci.h  func.h  gobang.h  list.h  maths.h  matrix.h  merge.h  movement.h  multiplicationTable.h  primeNum.h  printSingleDigit.h  rhombus.h  scoresEval.h  sequence.h  times.h
lib/: PascalsTriangle.cpp  algo.cpp  areaDiff.cpp  avgAge.cpp  caseConvert.cpp  fibonacci.cpp  func.cpp  gobang.cpp  list.cpp  maths.cpp  matrix.cpp  merge.cpp  movement.cpp  multiplicationTable.cpp  primeNum.cpp  printSingleDigit.cpp  rhombus.cpp  scoresEval.cpp  sequence.cpp  times.cpp
tests/: CMakeLists.txt  test_PascalsTriangle.cpp  test_algo.cpp  test_area.cpp  test_avgAge.cpp  test_caseConvert.cpp  test_fibonacci.cpp  test_func.cpp  test_list.cpp  test_maths.cpp  test_matrix.cpp  test_merge.cpp  test_movement.cpp  test_multiplicationTable.cpp  test_primeNum.cpp  test_printSingleDigit.cpp  test_rhombus.cpp  test_scoresEval.cpp  test_sequence.cpp  test_times.cpp
